adicionando seção sobre nós e a seção contagem

--- a/assets/CSS/header.css
+++ b/assets/CSS/header.css
@@ -1,7 +1,7 @@
 .cabecalho {
     display: flex;
     justify-content: space-around;
-    margin: 1.125rem auto;
+    margin: 1.125rem 6rem;
 }
 
 .cabecalho__vazia {
